--- a/Web_Page.html
+++ b/Web_Page.html
@@ -10,7 +10,7 @@
 
   		<h2>Web Page</h2>
 
-  		<p>This webpage will be updated as the semester progresses The code for the HTML will be available in my GitHub repo linked at the bottom.</p>
+  		<p>This webpage will be updated with CSS and Javascript as the semester progresses The code for the HTML will be available in my GitHub repo linked under this section.</p>
 	</div>
 
 	<a href="https://github.com/c-maldonado11/CSE-4050-Fall-2020"> My GitHub Repo </a>
