--- a/Web_Page.html
+++ b/Web_Page.html
@@ -1,10 +1,7 @@
 <html>
-
+	<link rel="stylesheet" href="style.css" />
 <body>
-
-	<h1> Carlos Maldonado </h1>
-	
-	<h2> CSE 4050 Web Application Development </h2> 
+	<h1> My Web Page </h1> 
 
 	<div style="background-color:gray;color:black;padding:5px;">
 
@@ -13,18 +10,17 @@
   		<p>This webpage will be updated with CSS and Javascript as the semester progresses The code for the HTML will be available in my GitHub repo linked under this section.</p>
 	</div>
 
-	<a href="https://github.com/c-maldonado11/CSE-4050-Fall-2020"> My GitHub Repo </a>
-
-
-	<p>
+	<footer>
 
 		<i> Created By: </i>
 
 		<br> <b> Carlos Maldonado </b>
 
-		<br> <b> CSE 4050 Fall 2020 </b>
+		<br> <b> CSE 4050 Web Application Development Fall 2020 </b>
+		
+		<br> <a href="https://github.com/c-maldonado11/CSE-4050-Fall-2020"> My GitHub Repo </a>
 
-	</p>
+	</footer>
 
 </body>
 
