--- a/Web_Page.html
+++ b/Web_Page.html
@@ -1,8 +1,14 @@
 <html>
 	<link rel="stylesheet" href="style.css" />
 	<script src="main.js"></script>
-<body>
-	<h1> My Web Page </h1> 
+
+	<head> 
+		<title>My Webpage Home </title>
+	</head>
+	
+<body> 
+
+	<h1> Welcome to my Webpage! </h1>
 
 	<nav class="dropdown">
 		<button onclick="myFunction()" class="dropbtn">My Stuff</button>
