--- a/Web_Page.html
+++ b/Web_Page.html
@@ -31,7 +31,7 @@
 	</nav>
 
 	<button class = "dropbtn">
-		<a href="Web_App1.html">Click here for web app 1</a>
+		<a href="Web_App1.html">Calculators</a>
 	</button>
 	
 	<nav>
@@ -58,7 +58,7 @@
 	</footer>
 
 	 <!-- SIGN UP MODAL -->
-	<div id="modal-signup" class="modal">
+	<div id="modal-signup" class="modal" style="background-color:rgb(255, 255, 255);color:black;padding:5px;">
 		<div class="modal-content">
 		  <h4>Sign up</h4><br />
 		  <form id="signup-form">
@@ -76,7 +76,7 @@
 	  </div>
 	
 	  <!-- LOGIN MODAL -->
-	  <div id="modal-login" class="modal">
+	  <div id="modal-login" class="modal" style="background-color:rgb(255, 255, 255);color:black;padding:5px;">
 		<div class="modal-content">
 		  <h4>Login</h4><br />
 		  <form id="login-form">
