--- a/Web_Page.html
+++ b/Web_Page.html
@@ -33,6 +33,9 @@
 	<button class = "dropbtn">
 		<a href="Web_App1.html">Calculators</a>
 	</button>
+	<button class = "dropbtn">
+		<a href="Web_App2.html">Currency Converter</a>
+	</button>
 	
 	<nav>
 		<button id = "city" onclick ="cityJSON()">Click me</button>
